2005-09-09  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py,
	  Atlas/Objects/objectFactory.cpp: Use class numbers directly
	  rather than instantiating an object to retrieve it.

	* Atlas/Objects/SmartPtr.h: Reduce the reference count on copied
	  object, as its been incremented in the SmartPtr constructor.

	* Atlas/Objects/gen_cpp.py, Atlas/Objects/flag.cpp,
	  Atlas/Objects/Anonymous.cpp, Atlas/Objects/Generic.cpp,
	  Atlas/Objects/Root.cpp, Atlas/Objects/RootEntity.cpp,
	  Atlas/Objects/RootEntityChildren.cpp,
	  Atlas/Objects/RootOperation.cpp,
	  Atlas/Objects/RootOperationChildren1.cpp,
	  Atlas/Objects/RootOperationChildren2.cpp,
	  Atlas/Objects/RootOperationChildren3.cpp,
	  Atlas/Objects/RootOperationChildren4.cpp,
	  Atlas/Objects/RootOperationChildren5.cpp:
	  In copy, set the refcount on the copied object to 0, overriding
	  the value set when the object is copied.

2005-09-07  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Message/Element.h, Atlas/Message/Element.cpp:
	  Add static typeName() method which provides a char * representation
	  of an Element type.

2005-09-07  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/GenerateObjectFactory.py, Atlas/Objects/flag.cpp,
	  Atlas/Objects/objectFactory.cpp: Modify factory to avoid double
	  lookup in factories, create a Generic operation when objtype is
	  op but parents are not in factories map, and create Anonymous
	  entities directly rather than looking up "anonymous" in the
	  factories.

2005-09-06  Al Riddoch  <alriddoch@zepler.org>

	* Atlas/Objects/gen_cpp.py, Atlas/Objects/flag.cpp,
	  Atlas/Objects/Anonymous.cpp, Atlas/Objects/Anonymous.h,
	  Atlas/Objects/Generic.cpp, Atlas/Objects/Generic.h:
	  Add setType() method to Anonymous entities and Generic
	  operations which allows the parents and class number to
	  be set simultaneously.

	* Atlas/Objects/GenerateObjectFactory.py,
	  Atlas/Objects/objectFactory.cpp,