@@ -1,3 +1,11 @@
+2005-09-13  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas-C++ 0.5.97 released.
+
+2005-06-11  Al Riddoch  <alriddoch@zepler.org>
+
+	* Atlas-C++ 0.5.0 released.
+
 2005-06-10  Al Riddoch  <alriddoch@zepler.org>
 
 	* Atlas-C++ 0.5.96 released.
